# Hackathon

./: .gitignore  debug.py  docker-compose.yml
api/: .env.sample  .flake8  Dockerfile  debug.py  pyproject.toml
api/api/: app.py  settings.py
api/api/dao/: postgre.py  qdrant.py
api/api/routes/: article_routes.py  monitoring_routes.py
api/api/schemas/: article_schemas.py
api/api/services/: article_services.py
data-pipeline/: .env.sample  pyproject.toml
data-pipeline/data-pipeline/: main.py  settings.py
data-pipeline/data_pipeline/: main.py
